--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "parcel src/index.html",
-    "watch" : "parcel watch src/index.html",
-    "build" : "parcel build src/index.html"
+    "start": "parcel src/index.html",
+    "watch": "parcel watch src/index.html",
+    "build": "parcel build src/index.html"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/MeloScav/my-website-cv-portfolio/issues"
   },
-  "homepage": "https://github.com/MeloScav/my-website-cv-portfolio#readme"
+  "homepage": "https://github.com/MeloScav/my-website-cv-portfolio#readme",
+  "dependencies": {
+    "bootstrap": "^5.0.0-beta2"
+  }
 }
