--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/MeloScav/my-website-cv-portfolio#readme",
   "dependencies": {
     "bootstrap": "^5.0.0-beta2"
+  },
+  "devDependencies": {
+    "sass": "^1.32.8"
   }
 }
