--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/MeloScav/my-website-cv-portfolio#readme",
   "dependencies": {
-    "bootstrap": "^5.0.0-beta2"
+    "bootstrap": "^5.0.0-beta2",
+    "rellax": "^1.12.1"
   },
   "devDependencies": {
     "sass": "^1.32.8"
