--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rellax": "^1.12.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.14",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.32.8"
   }
