--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "my-website-cv-portfolio",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/index.html",
-    "watch": "parcel watch src/index.html",
+    "watch": "parcel src/index.html",
     "build": "parcel build src/index.html"
   },
   "repository": {
@@ -26,7 +25,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "autoprefixer": "^9.8.6",
     "parcel-bundler": "^1.12.5",
+    "postcss": "^7.0.35",
     "sass": "^1.32.8"
+  },
+  "browserslist": [
+    "last 3 versions"
+  ],
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
   }
 }
