--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-website-cv-portfolio",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "parcel src/index.html",
