--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html --no-minify"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12",
     "autoprefixer": "^9.8.6",
     "parcel-bundler": "^1.12.5",
     "postcss": "^7.0.35",
