--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/core": "^7.13.14",
     "autoprefixer": "^9.8.6",
     "parcel-bundler": "^1.12.5",
+    "parcel-plugin-metaimage": "^1.2.4",
     "postcss": "^7.0.35",
     "sass": "^1.32.8"
   },
