--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/MeloScav/my-website-cv-portfolio#readme",
   "dependencies": {
-    "bootstrap": "^5.0.0-beta2",
+    "bootstrap": "^5.0.0-beta3",
+    "gsap": "^3.6.1",
     "rellax": "^1.12.1"
   },
   "devDependencies": {
